--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@chakra-ui/react": "^2.4.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/baloo-2": "^4.5.11",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
+    "react-bubbly-transitions": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3"
   },
