--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bubbly-transitions": "^1.0.1",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
