--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/baloo-2": "^4.5.11",
+    "axios": "^1.1.3",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-bubbly-transitions": "^1.0.1",
